# serverless-rust-plugin

./: .eslintrc.yml  .gitignore  LICENSE  README.md  index.js  jest.config.js  package-lock.json  package.json
.github/workflows/: ci.yml  integration_test.yml  release.yml  s3_test.yml  test.yml
docs/: README.md
docs/rust:invoke/: README.md
docs/rust:logs/: README.md
docs/rust:ps/: README.md
docs/rust:start/: README.md
docs/rust:stop/: README.md
examples/: README.md  commands.sh  testAll.sh
examples/ddb-docker-compose/: Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  serverless.yml  test.sh
examples/ddb-local/: .env  Cargo.toml  README.md  docker-compose.yml  event.json  expected.json  package-lock.json  serverless.yml  test.sh
examples/lambda-proxy/: Cargo.toml  README.md  package-lock.json  serverless.yml
examples/lambda-proxy/src/: main.rs
examples/multi-binary/: Cargo.toml  README.md  package-lock.json  package.json  serverless.yml  test.sh
examples/multiple-binaries/: .gitignore  Cargo.toml  README.md  event.json  package-lock.json  serverless.yml  test.sh
examples/s3-local/: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml  test.sh
examples/s3-local/expects/: lambdaOutput.json  upload.json
examples/s3-local/src/: main.rs
examples/simple/: .env  Cargo.toml  README.md  package-lock.json  serverless.yml  test.sh
examples/simple/expects/: envOption.json  pathOption.json
examples/simple/src/: main.rs
examples/workspace/: Cargo.toml  README.md  package-lock.json  serverless.yml  test.sh
lib/: builder.js  cargo.js  cargolambda.js  container.js  docker.js  lambda.js  local.js  request.js  utils.js
tests/: index.test.js
(+57 files in other folders)
