[package]
name = "simple"
version = "0.1.0"
authors = ["kaicoh <sumireminami@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.7"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
